[package]
name = "tm-ingress"
authors = []
version = "0.1.0"
edition = "2018"

[dependencies]
clap = "3"
# cosmos-sdk-proto = { git = "https://github.com/cosmos/cosmos-rust" }
serde = { version = "1.0.137", features = ["serde_derive"] }
thiserror = "1"
abscissa_tokio = "0.6.0"
tendermint-rpc = { version = "0.23", features = ["http-client"] }
tokio = { version = "1.19.2", features = ["full"] }
tower-http = { version = "0.3.4", features = ["trace"] }
tracing = "0.1.35"
tracing-subscriber = "0.3.15"
axum = "0.5.13"
hyper = { version = "0.14.20", features = ["tcp", "client"] }
tendermint = "0.23"
cosmrs = { git = "https://github.com/cosmos/cosmos-rust", default-features = true, features = ["rpc"] }
# PR to original repo is open to make JsonRpcRequest public, use fork for now
axum-jrpc = { git = "https://github.com/cbrit/axum-jrpc", branch = "cbrit/public-request-type" }
serde_json = "1.0.82"

[dependencies.abscissa_core]
version = "0.6.0-rc.0"
# optional: use `gimli` to capture backtraces
# see https://github.com/rust-lang/backtrace-rs/issues/189
# features = ["gimli-backtrace"]

[dev-dependencies]
abscissa_core = { version = "0.6.0-rc.0", features = ["testing"] }
assay = "0.1.1"
futures = "0.3.21"
ocular = {git = "https://github.com/peggyjv/ocular", branch = "collin/vendor-cosmos-sdk" }
once_cell = "1.2"

[features]

